# EstoQRe

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
EstoQRe/: asgi.py  settings.py  urls.py  wsgi.py
core0/: EstoQRe.py  admin.py  apps.py  models.py  views.py
core0/migrations/: 0001_initial.py  0002_produto_responsavel.py  0003_compra.py  0004_itenscompra.py
