[tool.poetry]
name = "estoqre"
version = "0.1.0"
description = "Gerenciador de produtos, patrimonio ou exibição de serviços"
authors = ["Nicholas Estrada <nicholastrada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
qrcode = "^7.4.2"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
